--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
     "angular-mocks": "^1.5.9",
     "angular-ui-router": "^1.0.18",
     "css-loader": "^1.0.0",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
     "gulp-sourcemaps": "^2.6.4",
-    "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "^2.99.1",
     "karma": "^2.0.4",
     "karma-chrome-launcher": "^2.2.0",
